--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 			<div class="col-sm-offset-3 col-sm-6 contact-form">		
 			<h3>Contact</h3>
 			<p>I am available for Freelancing work and collaboration.</p>
-			<form  >
+			<form action="https://formspree.io/xvovpwed" method="POST">
 			<input type="text" name="form_name" class="form-control" placeholder="Name" >
 			<input type="email"  name="form_email" class="form-control" placeholder="Email">
 			<textarea name="form_message" class="form-control" placeholder="Message" rows="5"></textarea>
