--- a/index.html
+++ b/index.html
@@ -104,31 +104,40 @@
 	<div class="container">
 	<h2>Skills</h2>
 
-	<!-- <div id="carousel-testimonials" class="carousel slide" data-ride="carousel">
+	<div id="carousel-testimonials" class="carousel slide" data-ride="carousel">
 
 	<div class="carousel-inner">	
 			<div class="item active animated bounceInRight">
-			<span class="animated slideInLeft"><img alt="portfolio" src="images/testimonials/1.jpg" width="100" class="img-circle"></span>
-			<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-			<span>Canada</span>
+			<span class="animated slideInLeft"><img alt="portfolio" src="images/testimonials/html5.svg" width="175" height="175"></span>
 			</div>
 			<div class="item  animated bounceInRight">
-			<span class="animated slideInLeft"><img alt="portfolio" src="images/testimonials/1.jpg" width="100" class="img-circle"></span>
-			<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-			<span>Canada</span>
+			<span class="animated slideInLeft"><img alt="portfolio" src="images/testimonials/Node.js_logo.svg" width="175" height="175"></span>
 			</div>
 			<div class="item  animated bounceInRight">
-			<span class="animated slideInLeft"><img alt="portfolio" src="images/testimonials/1.jpg" width="100" class="img-circle"></span>
-			<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-			<span>Canada</span>
+			<span class="animated slideInLeft"><img alt="portfolio" src="images/testimonials/javascript-4.svg" width="175" height="175"></span>
 			</div>
-	</div> -->
+			<div class="item  animated bounceInRight">
+			<span class="animated slideInLeft"><img alt="portfolio" src="images/testimonials/bootstrap-4.svg" width="175" height="175"></span>
+			</div>
+			<div class="item  animated bounceInRight">
+			<span class="animated slideInLeft"><img alt="portfolio" src="images/testimonials/css3.svg" width="175" height="175"></span>
+			</div>
+			<div class="item  animated bounceInRight">
+			<span class="animated slideInLeft"><img alt="portfolio" src="images/testimonials/jquery-2.svg" width="175" height="175"></span>
+			</div>
+			<div class="item  animated bounceInRight">
+			<span class="animated slideInLeft"><img alt="portfolio" src="images/testimonials/mongodb.svg" width="175" height="175"></span>
+			</div>
+			<div class="item  animated bounceInRight">
+			<span class="animated slideInLeft"><img alt="portfolio" src="images/testimonials/mysql-7.svg" width="175" height="175"></span>
+			</div>
+	</div>
 
 	<!-- Controls -->
-  	<!-- <a class="left arrow" href="#carousel-testimonials" data-slide="prev"><i class="fa fa-angle-left"></i></a>
-  	<a class="right arrow" href="#carousel-testimonials" data-slide="next"><i class="fa fa-angle-right"></i></a> -->
+  	<a class="left arrow" href="#carousel-testimonials" data-slide="prev"><i class="fa fa-angle-left"></i></a>
+  	<a class="right arrow" href="#carousel-testimonials" data-slide="next"><i class="fa fa-angle-right"></i></a>
   	<!-- Controls -->
-	<!-- </div> -->
+	</div>
 
 	</div>	
 </div>
