--- a/index.html
+++ b/index.html
@@ -131,6 +131,9 @@
 			<div class="item  animated bounceInRight">
 			<span class="animated slideInLeft"><img alt="portfolio" src="images/testimonials/mysql-7.svg" width="175" height="175"></span>
 			</div>
+			<div class="item  animated bounceInRight">
+			<span class="animated slideInLeft"><img alt="portfolio" src="images/testimonials/sequelize.svg" width="175" height="175"></span>
+			</div>
 	</div>
 
 	<!-- Controls -->
