--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 			<img class="card-img-top" src="images/grid-image/workdayscheduler.png" alt="Card image cap">
 			<div class="card-body">
 			  <h5 class="card-title">Work Day Scheduler</h5>
-			  <p class="card-text">To create a simple calendar application that allows the user to save events for each hour of the day. Events are saved into local storage and features dynamically updated HTML and CSS powered by jQuery.</p>
+			  <p class="card-text">To create a simple calendar application that allows the user to save events for each hour of the day. Events are saved into local storage and features dynamically updated HTML and CSS powered by jQuery</p>
 			  <a href="https://ldipaola.github.io/Work-Day-Scheduler/" style="display: inline;" class="card-link">Github</a>
 			  <a href="https://secure-coast-48273.herokuapp.com/" style="display: inline;" class="card-link">Deployed</a>
 			</div>
@@ -112,6 +112,24 @@
 			  <p class="card-text">Budget tracking app made using Node.js, Express.js, Handlebars.js demonstrating MVC design pattern</p>
 			  <a href="https://github.com/ldipaola/project-2" style="display: inline;" class="card-link">Github</a>
 			  <a href="https://project-2-monash.herokuapp.com/" style="display: inline;" class="card-link">Deployed</a>
+			</div>
+		  </div></li>
+		<li><div class="card portfolio animated fadeInDown">
+			<img class="card-img-top" src="images/grid-image/employee-directory.png" alt="Card image cap">
+			<div class="card-body">
+			  <h5 class="card-title">Employee Directory</h5>
+			  <p class="card-text">Employee directory made using react. App to allows a user to view information about employees, search by name, filter by title and order alphabetically</p>
+			  <a href="https://github.com/ldipaola/Employee-Directory" style="display: inline;" class="card-link">Github</a>
+			  <a href="https://ldipaola.github.io/Employee-Directory/" style="display: inline;" class="card-link">Deployed</a>
+			</div>
+		  </div></li>
+		<li><div class="card portfolio animated fadeInDown">
+			<img class="card-img-top" src="images/grid-image/note-taker.png" alt="Card image cap">
+			<div class="card-body">
+			  <h5 class="card-title">Note Taker</h5>
+			  <p class="card-text">An application that can be used to write, save, and delete notes. Made using Node.js and Express.js</p>
+			  <a href="https://github.com/ldipaola/note-taker" style="display: inline;" class="card-link">Github</a>
+			  <a href="https://shrouded-reaches-20476.herokuapp.com/" style="display: inline;" class="card-link">Deployed</a>
 			</div>
 		  </div></li>
 		<!-- <li><img alt="portfolio" src="images/grid-image/7.jpg"><div class="overlay animated fadeIn"><span class="animated bounceIn"><a href="http://www.thebootstrapthemes.com" target="_blank"><i class="fa fa-link"></i> View Website</a></span></div></li>
