--- a/index.html
+++ b/index.html
@@ -132,6 +132,15 @@
 			  <a href="https://shrouded-reaches-20476.herokuapp.com/" style="display: inline;" class="card-link">Deployed</a>
 			</div>
 		  </div></li>
+		<li><div class="card portfolio animated fadeInDown">
+			<img class="card-img-top" src="images/grid-image/covid-dashboard.png" alt="Card image cap">
+			<div class="card-body">
+			  <h5 class="card-title">Covid Dashboard</h5>
+			  <p class="card-text">This app is a render of all the countries around the world that have high numbers of cases of infections and deaths. Countries are searchable and statistics are graphed to show trends</p>
+			  <a href="https://github.com/ldipaola/covid-dashboard" style="display: inline;" class="card-link">Github</a>
+			  <a href="https://ldipaola.github.io/covid-dashboard/statistics.html" style="display: inline;" class="card-link">Deployed</a>
+			</div>
+		  </div></li>
 		<!-- <li><img alt="portfolio" src="images/grid-image/7.jpg"><div class="overlay animated fadeIn"><span class="animated bounceIn"><a href="http://www.thebootstrapthemes.com" target="_blank"><i class="fa fa-link"></i> View Website</a></span></div></li>
 		<li><img alt="portfolio" src="images/grid-image/1.jpg"><div class="overlay animated fadeIn"><span class="animated bounceIn"><a href="http://www.thebootstrapthemes.com" target="_blank"><i class="fa fa-link"></i> View Website</a></span></div></li>
 		<li><img alt="portfolio" src="images/grid-image/2.jpg"><div class="overlay animated fadeIn"><span class="animated fadeInDown"><a href="http://www.thebootstrapthemes.com" target="_blank"><i class="fa fa-link"></i> View Website</a></span></div></li>
