--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
-	<title>Portfolio website</title>
+	<title>Lucas Di Paola</title>
 	<meta name="author" content="Amit Bajracharya">
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -128,8 +128,8 @@
 			<div class="card-body">
 			  <h5 class="card-title">Note Taker</h5>
 			  <p class="card-text">An application that can be used to write, save, and delete notes. Made using Node.js and Express.js</p>
-			  <a href="https://github.com/ldipaola/note-taker" style="display: inline;" class="card-link">Github</a>
-			  <a href="https://shrouded-reaches-20476.herokuapp.com/" style="display: inline;" class="card-link">Deployed</a>
+			  <a href="https://github.com/ldipaola/note-taker" type="button" style="display: inline;" class="btn btn-outline-info">Github</a>
+			  <a href="https://shrouded-reaches-20476.herokuapp.com/" type="button" style="display: inline;" class="btn btn-outline-info">Deployed</a>
 			</div>
 		  </div></li>
 		<li><div class="card portfolio animated fadeInDown">
