update btn style

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 			<div class="card-body">
 			  <h5 class="card-title">Budget tracker</h5>
 			  <p class="card-text">Progressive Web App for tracking your budget</p>
-			  <a href="https://github.com/ldipaola/PWA-Budget-Tracker" style="display: inline;" class="card-link">Github</a>
-			  <a href="https://secure-coast-48273.herokuapp.com/" style="display: inline;" class="card-link">Deployed</a>
+			  <a href="https://github.com/ldipaola/PWA-Budget-Tracker" style="display: inline;" class="work work-btn">Github</a>
+			  <a href="https://secure-coast-48273.herokuapp.com/" style="display: inline;" class="work work-btn">Deployed</a>
 			</div>
 		  </div></li>
 		<li><div class="card portfolio animated fadeInDown">
@@ -83,8 +83,8 @@
 			<div class="card-body">
 			  <h5 class="card-title">Workout Tracker</h5>
 			  <p class="card-text">Simple app for tracking your workout</p>
-			  <a href="https://github.com/ldipaola/workout-tracker" style="display: inline;" class="card-link">Github</a>
-			  <a href="https://workout-tracker-ldp.herokuapp.com/" style="display: inline;" class="card-link">Deployed</a>
+			  <a href="https://github.com/ldipaola/workout-tracker" style="display: inline;" class="work work-btn">Github</a>
+			  <a href="https://workout-tracker-ldp.herokuapp.com/" style="display: inline;" class="work work-btn">Deployed</a>
 			</div>
 		  </div></li>
 		<li><div class="card portfolio animated fadeInDown">
@@ -92,8 +92,8 @@
 			<div class="card-body">
 			  <h5 class="card-title">Burger Logger</h5>
 			  <p class="card-text">A simple project made using MySQL, node, Express, Handlebars and a homemade ORM to demonstrate the Model View Controller (MVC) design pattern</p>
-			  <a href="https://github.com/ldipaola/burger-logger" style="display: inline;" class="card-link">Github</a>
-			  <a href="https://secure-coast-48273.herokuapp.com/" style="display: inline;" class="card-link">Deployed</a>
+			  <a href="https://github.com/ldipaola/burger-logger" style="display: inline;" class="work work-btn">Github</a>
+			  <a href="https://secure-coast-48273.herokuapp.com/" style="display: inline;" class="work work-btn">Deployed</a>
 			</div>
 		  </div></li>
 		<li><div class="card portfolio animated fadeInDown">
@@ -101,8 +101,8 @@
 			<div class="card-body">
 			  <h5 class="card-title">Work Day Scheduler</h5>
 			  <p class="card-text">To create a simple calendar application that allows the user to save events for each hour of the day. Events are saved into local storage and features dynamically updated HTML and CSS powered by jQuery</p>
-			  <a href="https://ldipaola.github.io/Work-Day-Scheduler/" style="display: inline;" class="card-link">Github</a>
-			  <a href="https://secure-coast-48273.herokuapp.com/" style="display: inline;" class="card-link">Deployed</a>
+			  <a href="https://ldipaola.github.io/Work-Day-Scheduler/" style="display: inline;" class="work work-btn">Github</a>
+			  <a href="https://secure-coast-48273.herokuapp.com/" style="display: inline;" class="work work-btn">Deployed</a>
 			</div>
 		  </div></li>
 		<li><div class="card portfolio animated fadeInDown">
@@ -110,8 +110,8 @@
 			<div class="card-body">
 			  <h5 class="card-title">Budget Tracker</h5>
 			  <p class="card-text">Budget tracking app made using Node.js, Express.js, Handlebars.js demonstrating MVC design pattern</p>
-			  <a href="https://github.com/ldipaola/project-2" style="display: inline;" class="card-link">Github</a>
-			  <a href="https://project-2-monash.herokuapp.com/" style="display: inline;" class="card-link">Deployed</a>
+			  <a href="https://github.com/ldipaola/project-2" style="display: inline;" class="work work-btn">Github</a>
+			  <a href="https://project-2-monash.herokuapp.com/" style="display: inline;" class="work work-btn">Deployed</a>
 			</div>
 		  </div></li>
 		<li><div class="card portfolio animated fadeInDown">
@@ -119,8 +119,8 @@
 			<div class="card-body">
 			  <h5 class="card-title">Employee Directory</h5>
 			  <p class="card-text">Employee directory made using react. App to allows a user to view information about employees, search by name, filter by title and order alphabetically</p>
-			  <a href="https://github.com/ldipaola/Employee-Directory" style="display: inline;" class="card-link">Github</a>
-			  <a href="https://ldipaola.github.io/Employee-Directory/" style="display: inline;" class="card-link">Deployed</a>
+			  <a href="https://github.com/ldipaola/Employee-Directory" style="display: inline;" class="work work-btn">Github</a>
+			  <a href="https://ldipaola.github.io/Employee-Directory/" style="display: inline;" class="work work-btn">Deployed</a>
 			</div>
 		  </div></li>
 		<li><div class="card portfolio animated fadeInDown">
@@ -128,8 +128,8 @@
 			<div class="card-body">
 			  <h5 class="card-title">Note Taker</h5>
 			  <p class="card-text">An application that can be used to write, save, and delete notes. Made using Node.js and Express.js</p>
-			  <a href="https://github.com/ldipaola/note-taker" type="button" style="display: inline;" class="btn btn-outline-info">Github</a>
-			  <a href="https://shrouded-reaches-20476.herokuapp.com/" type="button" style="display: inline;" class="btn btn-outline-info">Deployed</a>
+			  <a href="https://github.com/ldipaola/note-taker" style="display: inline;" class="work work-btn">Github</a>
+			  <a href="https://shrouded-reaches-20476.herokuapp.com/" style="display: inline;" class="work work-btn">Deployed</a>
 			</div>
 		  </div></li>
 		<li><div class="card portfolio animated fadeInDown">
@@ -137,8 +137,8 @@
 			<div class="card-body">
 			  <h5 class="card-title">Covid Dashboard</h5>
 			  <p class="card-text">This app is a render of all the countries around the world that have high numbers of cases of infections and deaths. Countries are searchable and statistics are graphed to show trends</p>
-			  <a href="https://github.com/ldipaola/covid-dashboard" style="display: inline;" class="card-link">Github</a>
-			  <a href="https://ldipaola.github.io/covid-dashboard/statistics.html" style="display: inline;" class="card-link">Deployed</a>
+			  <a href="https://github.com/ldipaola/covid-dashboard" style="display: inline;" class="work work-btn">Github</a>
+			  <a href="https://ldipaola.github.io/covid-dashboard/statistics.html" style="display: inline;" class="work work-btn">Deployed</a>
 			</div>
 		  </div></li>
 		<!-- <li><img alt="portfolio" src="images/grid-image/7.jpg"><div class="overlay animated fadeIn"><span class="animated bounceIn"><a href="http://www.thebootstrapthemes.com" target="_blank"><i class="fa fa-link"></i> View Website</a></span></div></li>
