update project descriptions

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 			<img class="card-img-top" src="images/grid-image/budget-tracker.png" alt="Card image cap">
 			<div class="card-body">
 			  <h5 class="card-title">Budget tracker</h5>
-			  <p class="card-text">Progressive Web App for tracking your budget</p>
+			  <p class="card-text">Progressive Web App for tracking your budget. Demonstrating the use of the serviceWorker and indexedDB to cache and store data while app is offline and sync with a database once back online</p>
 			  <a href="https://github.com/ldipaola/PWA-Budget-Tracker" style="display: inline;" class="work work-btn">Github</a>
 			  <a href="https://secure-coast-48273.herokuapp.com/" style="display: inline;" class="work work-btn">Deployed</a>
 			</div>
@@ -82,7 +82,7 @@
 			<img class="card-img-top" src="images/grid-image/workout-tracker.png" alt="Card image cap">
 			<div class="card-body">
 			  <h5 class="card-title">Workout Tracker</h5>
-			  <p class="card-text">Simple app for tracking your workout</p>
+			  <p class="card-text">Simple app for tracking your workout. Using MongoDB & Mongoose</p>
 			  <a href="https://github.com/ldipaola/workout-tracker" style="display: inline;" class="work work-btn">Github</a>
 			  <a href="https://workout-tracker-ldp.herokuapp.com/" style="display: inline;" class="work work-btn">Deployed</a>
 			</div>
@@ -109,7 +109,7 @@
 			<img class="card-img-top" src="images/grid-image/budget.png" alt="Card image cap">
 			<div class="card-body">
 			  <h5 class="card-title">Budget Tracker</h5>
-			  <p class="card-text">Budget tracking app made using Node.js, Express.js, Handlebars.js demonstrating MVC design pattern</p>
+			  <p class="card-text">Budget tracking app made using Node.js, Express.js, Handlebars.js and Sequelize. Demonstrating MVC design pattern</p>
 			  <a href="https://github.com/ldipaola/project-2" style="display: inline;" class="work work-btn">Github</a>
 			  <a href="https://project-2-monash.herokuapp.com/" style="display: inline;" class="work work-btn">Deployed</a>
 			</div>
