--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 		<li><div class="card portfolio animated fadeInDown">
 			<img class="card-img-top" src="images/grid-image/budget-tracker.png" alt="Card image cap">
 			<div class="card-body">
-			  <h5 class="card-title">Budget tracker</h5>
+			  <h5 class="card-title">PWA Budget tracker</h5>
 			  <p class="card-text">Progressive Web App for tracking your budget. Demonstrating the use of the serviceWorker and indexedDB to cache and store data while app is offline and sync with a database once back online</p>
 			  <a href="https://github.com/ldipaola/PWA-Budget-Tracker" target="_blank" style="display: inline;" class="work work-btn">Github</a>
 			  <a href="https://secure-coast-48273.herokuapp.com/" target="_blank" style="display: inline;" class="work work-btn">Deployed</a>
