--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 			<img class="card-img-top" src="images/grid-image/google-books.png" alt="Card image cap">
 			<div class="card-body">
 			  <h5 class="card-title">Google Books</h5>
-			  <p class="card-text">App for searching and saving google books</p>
+			  <p class="card-text">App for searching and saving google books. Technology used MERN stack</p>
 			  <a href="https://github.com/ldipaola/google-book-search" target="_blank" style="display: inline;" class="work work-btn">Github</a>
 			  <a href="https://mysterious-badlands-35852.herokuapp.com/" target="_blank" style="display: inline;" class="work work-btn">Deployed</a>
 			</div>
